add unit test one second test and 0.1, 0.01,0.001
Format logs during unit test execution

remove not success unit test

fix test yml

add time out

remove unit test

Update ios.yml

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 jobs:
   run-test:
     runs-on: macOS-latest
+    timeout-minutes: 10
     strategy:
       matrix:
         swift-version: [5.0, 4.2, 4.0]
