--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,6 +8,12 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
+        destination: [
+          'macOS', 
+          'iOS Simulator,name=iPhone 14', 
+          'tvOS Simulator,name=Apple TV', 
+          'watchOS Simulator,name=Apple Watch Series 8 (41mm)'
+        ]
         swift-version: [5.0, 4.2, 4.0]
     steps:
       - uses: actions/checkout@v1
